--- a/front-end/src/app/modules/order/components/order-item/order-item.component.scss
+++ b/front-end/src/app/modules/order/components/order-item/order-item.component.scss
@@ -1,6 +1,7 @@
-@import "../../../sass/variables";
-@import "../../../sass/mixins";
-@import "../../../sass/functions";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
 
 :host {
   grid-template-columns: inherit;
