--- a/front-end/src/app/modules/order/pages/order-finished/order-finished.component.scss
+++ b/front-end/src/app/modules/order/pages/order-finished/order-finished.component.scss
@@ -1,7 +1,7 @@
-@import "../../../sass/variables";
-@import "../../../sass/mixins";
-@import "../../../sass/functions";
-@import "../../../sass/media";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
 
 :host {
   .panel {
