--- a/front-end/src/app/modules/admin/components/author-dialog/author-dialog.component.scss
+++ b/front-end/src/app/modules/admin/components/author-dialog/author-dialog.component.scss
@@ -1,7 +1,7 @@
-@import "../../../../../sass/functions";
-@import "../../../../../sass/variables";
-@import "../../../../../sass/mixins";
-@import "../../../../../sass/media";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
 
 mat-dialog-actions {
   @include flex-center;
