--- a/front-end/src/app/modules/admin/components/comic-dialog/comic-dialog.component.scss
+++ b/front-end/src/app/modules/admin/components/comic-dialog/comic-dialog.component.scss
@@ -1,7 +1,8 @@
-@import "../../../../../sass/functions";
-@import "../../../../../sass/variables";
-@import "../../../../../sass/mixins";
-@import "../../../../../sass/media";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
+
 mat-dialog-actions {
   @include flex-center;
   justify-content: flex-end;
