--- a/front-end/src/app/modules/authentication/pages/register/register.component.scss
+++ b/front-end/src/app/modules/authentication/pages/register/register.component.scss
@@ -1,7 +1,7 @@
-@import "../../../../../sass/functions";
-@import "../../../../../sass/variables";
-@import "../../../../../sass/mixins";
-@import "../../../../../sass/media";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
 
 mat-card {
   padding: rem(30);
