--- a/front-end/src/app/modules/order/components/order-item/order-item.component.html
+++ b/front-end/src/app/modules/order/components/order-item/order-item.component.html
@@ -1,13 +1,15 @@
 <div class="order__item">
-  <span class="order__item__quantity">
+  <span gdRow.lt-sm="1/3" class="order__item__quantity">
     <i (click)="quantityDown(item)" class="fas fa-minus"></i>
     <span>{{ item.quantity }}</span>
     <i (click)="quantityUp(item)" class="fas fa-plus"></i>
   </span>
   <span class="order__item__name">{{ item.comic.title }}</span>
-  <span class="order__item__description">{{ item.comic.description }}</span>
-  <span class="order__item__price"
+  <span fxHide.lt-sm="true" class="order__item__description">{{
+    item.comic.description
+  }}</span>
+  <span gdRow.lt-sm="2" gdColumn.lt-sm="2" class="order__item__price"
     >R$ {{ item.getTotalValue() | number: "2.2" }}</span
   >
-  <i (click)="removeItem(item)" class="fas fa-trash-alt"></i>
+  <i gdRow.lt-sm="1/3" (click)="removeItem(item)" class="fas fa-trash-alt"></i>
 </div>
