--- a/front-end/src/app/modules/order/pages/order/order.component.html
+++ b/front-end/src/app/modules/order/pages/order/order.component.html
@@ -17,7 +17,12 @@
 
       <mat-form-field appearance="outline">
         <mat-label>CEP</mat-label>
-        <input type="text" formControlName="postalCode" matInput />
+        <input
+          type="text"
+          mask="00.000-000"
+          formControlName="postalCode"
+          matInput
+        />
         <mat-error>
           <span cmsShowValidation="postalCode"></span>
         </mat-error>
@@ -42,6 +47,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Número</mat-label>
         <input
+          mask="999999"
           type="text"
           formControlName="number"
           matInput
@@ -107,8 +113,12 @@
         <div class="order__items__table__header">
           <span class="order__items__table__header__item">Quantidade</span>
           <span class="order__items__table__header__item">Item</span>
-          <span class="order__items__table__header__item">Descrição</span>
-          <span class="order__items__table__header__item">Subtotal</span>
+          <span fxHide.lt-sm class="order__items__table__header__item"
+            >Descrição</span
+          >
+          <span fxHide.lt-sm class="order__items__table__header__item"
+            >Subtotal</span
+          >
         </div>
         <div class="order__items__table__body">
           <cms-order-item
