--- a/front-end/src/app/pages/comics/comics.component.scss
+++ b/front-end/src/app/pages/comics/comics.component.scss
@@ -1,7 +1,7 @@
-@import "../../../sass/functions";
-@import "../../../sass/variables";
-@import "../../../sass/mixins";
-@import "../../../sass/media";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
 
 .comics {
   @include flex-center(column);
