--- a/front-end/src/app/pages/not-found/not-found.component.scss
+++ b/front-end/src/app/pages/not-found/not-found.component.scss
@@ -1,6 +1,7 @@
-@import "../../../sass/variables";
-@import "../../../sass/mixins";
-@import "../../../sass/functions";
+@import "media";
+@import "variables";
+@import "mixins";
+@import "functions";
 
 .not-found {
   margin-top: rem(20);
