--- a/front-end/src/app/pages/comic-detail/comic-detail.component.html
+++ b/front-end/src/app/pages/comic-detail/comic-detail.component.html
@@ -56,7 +56,7 @@
 
     <form [formGroup]="comicForm" class="comic__form">
       <span class="comic__price">R$ {{ comic?.price | number: "2.2" }}</span>
-      <span *ngIf="comic?.inventoryQuantity" class="comic__inventory">
+      <span class="comic__inventory">
         Disponibilidade:
         <span
           class="comic__inventory{{
@@ -72,7 +72,7 @@
         ></span
       >
 
-      <mat-form-field>
+      <mat-form-field *ngIf="comic?.inventoryQuantity">
         <mat-label>Quantidade</mat-label>
         <input
           formControlName="quantity"
