💎 style: change px to rem function.

--- a/front-end/src/app/components/header/header.component.scss
+++ b/front-end/src/app/components/header/header.component.scss
@@ -79,12 +79,12 @@
     }
 
     &__link {
-      font-size: 14px;
+      font-size: rem(14);
       transition: color 0.2s;
       color: white;
 
       strong {
-        font-size: 18px;
+        font-size: rem(18);
       }
     }
 
