--- a/front-end/src/app/modules/authentication/pages/register/register.component.scss
+++ b/front-end/src/app/modules/authentication/pages/register/register.component.scss
@@ -10,7 +10,7 @@ mat-card {
   background-color: $color-panel-bg;
 
   ::ng-deep .mat-card-header-text {
-    margin: 0px;
+    margin: 0;
   }
 }
 
