--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -86,7 +86,7 @@ $global-max-width: rem(1440);
 
 $global-font-size: rem(18);
 $global-line-height: 1.5;
-$global-radius: 10px;
+$global-radius: rem(10);
 $global-module-size: rem(30);
 $header-size: rem(60);
 
