--- a/front-end/src/app/components/comic/comic.component.scss
+++ b/front-end/src/app/components/comic/comic.component.scss
@@ -5,7 +5,7 @@
 
 .comic {
   background-color: $color-panel-bg;
-  border-radius: 5px;
+  border-radius: rem(5);
   position: relative;
   min-height: rem(140);
   width: rem(400);
@@ -110,7 +110,7 @@
       flex-direction: column;
       align-items: flex-end;
       justify-content: space-between;
-      height: 91px;
+      height: rem(91);
     }
   }
 
