--- a/front-end/src/app/modules/authentication/pages/login/login.component.scss
+++ b/front-end/src/app/modules/authentication/pages/login/login.component.scss
@@ -9,7 +9,7 @@ mat-card {
   margin: 0 auto;
 
   ::ng-deep .mat-card-header-text {
-    margin: 0px;
+    margin: 0;
   }
   background-color: $color-panel-bg;
 }
