--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -43,17 +43,17 @@
 .mat-h1,
 .mat-headline,
 .mat-typography h1 {
-  font: 400 24px/32px Roboto, "Helvetica Neue", sans-serif;
+  font: 400 rem(24) / rem(32) Roboto, "Helvetica Neue", sans-serif;
   letter-spacing: normal;
-  margin: 0 0 10px;
+  margin: 0 0 rem(10);
 }
 
 .mat-h2,
 .mat-title,
 .mat-typography h2 {
-  font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+  font: 500 rem(20) / rem(32) Roboto, "Helvetica Neue", sans-serif;
   letter-spacing: normal;
-  margin: 0 0 10px;
+  margin: 0 0 rem(10);
 }
 
 .mat-menu-panel {
@@ -129,7 +129,7 @@ table {
   th.mat-header-cell,
   td.mat-cell,
   td.mat-footer-cell {
-    padding: 0 10px;
+    padding: 0 rem(10);
   }
 
   th.mat-header-cell {
@@ -225,7 +225,7 @@ mat-paginator {
 }
 
 .mat-expansion-indicator {
-  margin-right: 2px !important ;
+  margin-right: rem(2) !important ;
 }
 
 .mat-drawer-inner-container {
