💎 style: extraction of code groups to their own files.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
     </ul>
   </nav>
   <div class="header__tools">
-    <cms-toggle-theme style="margin-right: 20px"></cms-toggle-theme>
+    <cms-toggle-theme></cms-toggle-theme>
 
     <cms-shopping-cart></cms-shopping-cart>
     <button
