--- a/front-end/src/app/modules/admin/components/comic-inventory-dialog/comic-inventory-dialog.component.html
+++ b/front-end/src/app/modules/admin/components/comic-inventory-dialog/comic-inventory-dialog.component.html
@@ -4,6 +4,9 @@
   <mat-dialog-content>
     <mat-form-field>
       <input matInput placeholder="Quantidade" formControlName="quantity" />
+      <mat-error>
+        <span cmsShowValidation="quantity"></span>
+      </mat-error>
     </mat-form-field>
   </mat-dialog-content>
 
