--- a/front-end/src/app/modules/shared/components/dropdown-list/dropdown-list.component.html
+++ b/front-end/src/app/modules/shared/components/dropdown-list/dropdown-list.component.html
@@ -22,4 +22,7 @@
       {{ data[valueKeyObject] }}
     </mat-option>
   </mat-select>
+  <mat-error>
+    <span [cmsShowValidation]="getFormControlName(dataControl)"></span>
+  </mat-error>
 </mat-form-field>
