--- a/front-end/src/sass/_responsive-helpers.scss
+++ b/front-end/src/sass/_responsive-helpers.scss
@@ -1,5 +1,5 @@
-@import "../sass/variables";
-@import "../sass/media";
+@import "variables";
+@import "media";
 
 /* ========================================================================== */
 /* MOBILE */
