--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -1,4 +1,4 @@
-@import "../sass/functions";
+@import "functions";
 
 // ==========================================================================
 // Font
