--- a/front-end/src/app/modules/admin/components/author-dialog/author-dialog.component.html
+++ b/front-end/src/app/modules/admin/components/author-dialog/author-dialog.component.html
@@ -4,6 +4,9 @@
   <mat-dialog-content>
     <mat-form-field>
       <input matInput placeholder="Nome" formControlName="name" />
+      <mat-error>
+        <span cmsShowValidation="name"></span>
+      </mat-error>
     </mat-form-field>
   </mat-dialog-content>
 
